Add this new file

--- a/solo_rebound.html
+++ b/solo_rebound.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinity Smart Track | Shipra Play House</title>
+    <title>Solo Rebound Tennis Trainer | Shipra Play House</title>
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/infinity_smart.css">
+    <link rel="stylesheet" href="./assets/css/solo_rebound.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-       <!-- Header start -->
+    <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -34,8 +34,8 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
-                            class="img-fluid"></a>
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                            loading="lazy" class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
@@ -54,13 +54,15 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home"> Educational
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home">
+                                                        Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-profile">Construction Toy
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-profile">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -68,24 +70,28 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0"> Board Game</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0">
+                                                        Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings1">Musical Toy</a>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings1">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2"> Puzzle Game </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
+                                                        Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3"> Building Blocks
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3">
+                                                        Building Blocks
                                                     </a>
                                                 </li>
                                             </td>
@@ -93,12 +99,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6"> Sports Toy </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6">
+                                                        Sports Toy </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7"> Creative Toy
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7">
+                                                        Creative Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -106,12 +114,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8"> Baby Toy</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8">
+                                                        Baby Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -119,8 +129,10 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday
+                                Gifts</a></li>
+                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate
+                                Gifts</a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto position-relative">
@@ -168,8 +180,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
-                        class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                        loading="lazy" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -194,8 +206,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
-                        class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                        loading="lazy" class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -226,48 +238,48 @@
     </div>
     <!-- offcanvas section end -->
 
-    <!-- infinity_smart start -->
-    <section class="infinity_smart">
+    <!-- solo_rebound start -->
+    <section class="solo_rebound">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Infinity Smart Track</a></b></h2>
+                    <h2 class="pt-5"><b><a href="toys-games.html">Solo Rebound Tennis Trainer</a></b></h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 pt-4">
-                    <img src="./assets/img/Products img/Edited/F200/A1.jpg" alt="education_1"
+                    <img src="./assets/img/Products img/Edited/F701/1.jpg" alt="education_1"
                         class="img-fluid mainProductImage" id="mainDisplay" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
-                        <img src="./assets/img/Products img/Edited/F200/A1.jpg" class="thumb-img active"
+                        <img src="./assets/img/Products img/Edited/F701/1.jpg" class="thumb-img active"
                             onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F200/A2.jpg" class="thumb-img"
+                        <img src="./assets/img/Products img/Edited/F701/2.jpg" class="thumb-img"
                             onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F200/A3.jpg" class="thumb-img"
+                        <img src="./assets/img/Products img/Edited/F701/3.jpg" class="thumb-img"
                             onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <a href="#" role="button" data-bs-toggle="modal" data-bs-target="#youtube1">
-                            <img src="./assets/img/Products img/Edited/F200/A4.jpg" class="thumb-img "
+                            <img src="./assets/img/Products img/Edited/F701/4.jpg" class="thumb-img "
                                 onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
                     <div class="border box p-4 mb-3">
-                        <h4><b>Infinity Smart Track</b></h4>
+                        <h4><b>Solo Rebound Tennis Trainer</b></h4>
                         <h3><b>₹ 199</b></h3>
                         <span>Free Delivery</span>
                         <div class="text-center mt-4">
-                            <a href="https://wa.link/hom484" class="button rounded-1" id="whats-link">
+                            <a href="https://wa.link/hcga11" class="button rounded-1" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
                                 CONNECT US</a>
-
                         </div>
                     </div>
                     <div class="border box p-4">
                         <p>Boost Your Child's Learning Through Play</p>
                         <p><b> Looking for toys that are both fun and educational?</b></p>
                         <p>Discover our carefully curated collection designed to support your child’s cognitive, motor,
-                            and social development.</p>
+                            and
+                            social development.</p>
                         <ul class="list-unstyled">
                             <li>✅ High-Quality & Safe Materials</li>
                             <li>✅ Designed by Experts in Child Development</li>
@@ -275,31 +287,26 @@
                             <li>✅ Encourages Imagination, Focus & Skill-Building</li>
                         </ul>
                         <ul class="list-unstyled">
-                            <li><b>🧠 Enhances logical thinking and problem-solving skills</b></li>
-                            <li><b>🎢 Promotes STEM learning through interactive track design</b></li>
-                            <li><b>👀 Boosts visual tracking and concentration</b></li>
-                            <li><b>🖐️ Improves fine motor skills during assembly and play</b></li>
+                            <li><b>🎾 Improves Tennis Skills</b></li>
+                            <li><b>🧠 Enhances Focus & Coordination</b></li>
+                            <li><b>💪 Boosts Physical Fitness</b></li>
+                            <li><b>🚗 Portable with Wheels </b></li>
                         </ul>
-
                     </div>
                 </div>
-
             </div>
 
         </div>
     </section>
-
-
-    <!-- infinity_smart end -->
-
+    <!-- solo_rebound end -->
     <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
-                                class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                                loading="lazy" class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
