--- a/shape_matching.html
+++ b/shape_matching.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOPPING CRAFT</title>
+    <title>Shape Matching Game | Shipra Play House</title>
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -280,68 +280,8 @@
                             <li><b>🤲 Improves Motor Skills</b></li>
                             <li><b>😁 Keeps Kids Engaged </b></li>
                         </ul>
-
                     </div>
-
-
                 </div>
-                <!-- <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4">
-                        <h2><b>Alpha Numeric Puzzle Game</b></h2>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td class="fw6">Material</td>
-                                    <td>Plastic</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Color</td>
-                                    <td>NA</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Age Group</td>
-                                    <td>3+</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Packaging</td>
-                                    <td>Printed Box</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Inner</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Outer/ Master</td>
-                                    <td>112</td>
-                                </tr>
-                                <tr>
-                                    <td class="fw6">Rate</td>
-                                    <td>51 +12% Gst</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <p class="mb-1 mt-2"><b>Alpha Numeric Puzzle Game – Learn Through Play!</b></p>
-                        <p>Make early learning fun and engaging with the Alpha Numeric Puzzle Game! Designed to
-                            introduce kids to letters and numbers in a hands-on way, this colorful puzzle encourages
-                            cognitive development while keeping little minds entertained. </p>
-                        <p><b>Features:</b></p>
-                        <ul>
-                            <li><b>Complete Learning Set: </b> Includes all 26 letters (A–Z) and numbers 0–9 to build
-                                literacy and numeracy skills.</li>
-                            <li><b>Bright & Engaging: </b>Vivid colors and fun shapes capture children’s attention and
-                                spark curiosity.</li>
-
-                        </ul>
-                        <div class="text-center mt-4">
-                            <a href="https://wa.link/xmj64w" class="button" id="whats-link">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                CONNECT US</a>
-                            <a href="#" class="button" id="buy-now">
-                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
-                                BUY NOW</a>
-                        </div>
-                    </div>
-                </div> -->
             </div>
 
         </div>
