all product add

--- a/gobble_game.html
+++ b/gobble_game.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-    <!-- Header start -->
+  <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -131,8 +131,8 @@
                         </li>
                         <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday
                                 Gifts</a></li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate
-                                Gifts</a></li>
+                        <li class="nav-item"><a href="all_product.html" class="nav-link">All Product
+                            </a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto position-relative">
@@ -199,7 +199,7 @@
                 </li>
                 <li><a href="toys-games.html">Products</a></li>
                 <li><a href="toys-games.html#v-pills-settings4">Birthday Gifts</a></li>
-                <li><a href="toys-games.html#v-pills-settings5">Corporate Gifts</a></li>
+                <li><a href="all_product.html">All Product</a></li>
             </ul>
         </div>
     </div>
@@ -237,6 +237,7 @@
         </div>
     </div>
     <!-- offcanvas section end -->
+
 
     <!-- gobble_game start -->
     <section class="gobble_game">
