--- a/jumping_pogo.html
+++ b/jumping_pogo.html
@@ -34,8 +34,8 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
-                            class="img-fluid"></a>
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                            loading="lazy" class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
@@ -54,13 +54,15 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home"> Educational
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home">
+                                                        Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-profile">Construction Toy
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-profile">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -68,24 +70,28 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0"> Board Game</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0">
+                                                        Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings1">Musical Toy</a>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings1">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2"> Puzzle Game </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
+                                                        Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3"> Building Blocks
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3">
+                                                        Building Blocks
                                                     </a>
                                                 </li>
                                             </td>
@@ -93,12 +99,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6"> Sports Toy </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6">
+                                                        Sports Toy </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7"> Creative Toy
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7">
+                                                        Creative Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -106,12 +114,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8"> Baby Toy</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8">
+                                                        Baby Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -119,8 +129,10 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday
+                                Gifts</a></li>
+                        <li class="nav-item"><a href="all_product.html" class="nav-link">All Product
+                            </a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto position-relative">
@@ -168,8 +180,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
-                        class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                        loading="lazy" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -187,15 +199,15 @@
                 </li>
                 <li><a href="toys-games.html">Products</a></li>
                 <li><a href="toys-games.html#v-pills-settings4">Birthday Gifts</a></li>
-                <li><a href="toys-games.html#v-pills-settings5">Corporate Gifts</a></li>
+                <li><a href="all_product.html">All Product</a></li>
             </ul>
         </div>
     </div>
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
-                        class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                        loading="lazy" class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -225,6 +237,7 @@
         </div>
     </div>
     <!-- offcanvas section end -->
+
 
     <!-- jumping_pogo start -->
     <section class="jumping_pogo">
