--- a/all_product.html
+++ b/all_product.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/corporate_gifts.css">
+    <link rel="stylesheet" href="./assets/css/all_product.css">
 </head>
 
 <body>
@@ -131,8 +131,8 @@
                         </li>
                         <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday
                                 Gifts</a></li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate
-                                Gifts</a></li>
+                        <li class="nav-item"><a href="all_product.html" class="nav-link">All Product
+                            </a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto position-relative">
@@ -199,7 +199,7 @@
                 </li>
                 <li><a href="toys-games.html">Products</a></li>
                 <li><a href="toys-games.html#v-pills-settings4">Birthday Gifts</a></li>
-                <li><a href="toys-games.html#v-pills-settings5">Corporate Gifts</a></li>
+                <li><a href="all_product.html">All Product</a></li>
             </ul>
         </div>
     </div>
