--- a/toys-games.html
+++ b/toys-games.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-    <!-- Header start -->
+     <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -54,13 +54,15 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-home"> Educational
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home">
+                                                        Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-profile">Construction Toy
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-profile">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -68,24 +70,28 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-settings0"> Board Game</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0">
+                                                        Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-settings1">Musical Toy</a>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings1">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-settings2"> Puzzle Game </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
+                                                        Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-settings3"> Building Blocks
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3">
+                                                        Building Blocks
                                                     </a>
                                                 </li>
                                             </td>
@@ -93,12 +99,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-settings6"> Sports Toy </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6">
+                                                        Sports Toy </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-settings7"> Creative Toy
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7">
+                                                        Creative Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -106,12 +114,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-settings8"> Baby Toy</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8">
+                                                        Baby Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#v-pills-settings9">Outdoor Toy</a>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -119,8 +129,10 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="#v-pills-settings4" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday
+                                Gifts</a></li>
+                        <li class="nav-item"><a href="all_product.html" class="nav-link">All Product
+                            </a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto position-relative">
@@ -186,8 +198,8 @@
                     </a>
                 </li>
                 <li><a href="toys-games.html">Products</a></li>
-                <li><a href="#v-pills-settings4">Birthday Gifts</a></li>
-                <li><a href="#v-pills-settings5">Corporate Gifts</a></li>
+                <li><a href="toys-games.html#v-pills-settings4">Birthday Gifts</a></li>
+                <li><a href="all_product.html">All Product</a></li>
             </ul>
         </div>
     </div>
@@ -211,20 +223,21 @@
         </div>
         <div class="offcanvas-body">
             <ul class="nav-item list-unstyled mb-0">
-                <li><a href="#v-pills-home">Educational Toy</a> </li>
-                <li><a href="#v-pills-profile">Construction Toy</a></li>
-                <li><a href="#v-pills-settings0">Board Game</a></li>
-                <li><a href="#v-pills-settings1">Musical Toy</a></li>
-                <li><a href="#v-pills-settings2">Puzzle Game</a></li>
-                <li><a href="#v-pills-settings3">Building Blocks</a></li>
-                <li><a href="#v-pills-settings6">Sports Toy</a></li>
-                <li><a href="#v-pills-settings7">Creative Toy</a></li>
-                <li><a href="#v-pills-settings8">Baby Toy</a></li>
-                <li><a href="#v-pills-settings9">Outdoor Toy</a></li>
+                <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
+                <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
+                <li><a href="toys-games.html#v-pills-settings1">Musical Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings2">Puzzle Game</a></li>
+                <li><a href="toys-games.html#v-pills-settings3">Building Blocks</a></li>
+                <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings8">Baby Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings9">Outdoor Toy</a></li>
             </ul>
         </div>
     </div>
     <!-- offcanvas section end -->
+
     <!-- Product section start -->
     <section id="product">
         <div class="container-fluid px-5 py-5">
