--- a/triggle_chess.html
+++ b/triggle_chess.html
@@ -24,7 +24,7 @@
     </section>
     <!-- top-header start -->
     <!-- Header start -->
-      <!-- Header start -->
+  <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -35,8 +35,8 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
-                            class="img-fluid"></a>
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                            loading="lazy" class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
@@ -55,13 +55,15 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home"> Educational
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home">
+                                                        Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-profile">Construction Toy
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-profile">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -69,24 +71,28 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0"> Board Game</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0">
+                                                        Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings1">Musical Toy</a>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings1">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2"> Puzzle Game </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
+                                                        Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3"> Building Blocks
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3">
+                                                        Building Blocks
                                                     </a>
                                                 </li>
                                             </td>
@@ -94,12 +100,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6"> Sports Toy </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6">
+                                                        Sports Toy </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7"> Creative Toy
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7">
+                                                        Creative Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -107,12 +115,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8"> Baby Toy</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8">
+                                                        Baby Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -120,8 +130,10 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday
+                                Gifts</a></li>
+                        <li class="nav-item"><a href="all_product.html" class="nav-link">All Product
+                            </a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto position-relative">
@@ -169,8 +181,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
-                        class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                        loading="lazy" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -188,15 +200,15 @@
                 </li>
                 <li><a href="toys-games.html">Products</a></li>
                 <li><a href="toys-games.html#v-pills-settings4">Birthday Gifts</a></li>
-                <li><a href="toys-games.html#v-pills-settings5">Corporate Gifts</a></li>
+                <li><a href="all_product.html">All Product</a></li>
             </ul>
         </div>
     </div>
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
-                        class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                        loading="lazy" class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -226,6 +238,7 @@
         </div>
     </div>
     <!-- offcanvas section end -->
+
 
     <!-- triggle_chess start -->
     <section class="triggle_chess">
