all product add this

--- a/all_product.html
+++ b/all_product.html
@@ -237,9 +237,204 @@
         </div>
     </div>
     <!-- offcanvas section end -->
+    <!-- Product section start -->
+    <section id="product">
+        <div class="container-fluid px-5 py-5">
+            <div class="row d-flex align-items-start">
+                <div class="col-md-12 col-lg-12 mb-3">
+                    <!-- <div class="tab-content" id="v-pills-tabContent"> -->
+                    <!-- <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+                            aria-labelledby="v-pills-home-tab" tabindex="0"> -->
+                    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-2 row-cols-1">
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/2.jpeg" class="card-img-top" alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">2 in 1 Montessori Learning toy</h5>
+                                    <p class="card-text">Boosts early learning with fun, hands-on activities
+                                        and
+                                        dual-purpose play.</p>
+                                    <h4><b>₹ 299</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="montessori_learning.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/7.jpeg" class="card-img-top" alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Shape Matching Game</h5>
+                                    <p class="card-text">Fun and educational toy to match shapes, colors,
+                                        and
+                                        boost motor skills.</p>
+                                    <h4><b>₹ 299</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="shape_matching.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/Products img/Edited/F302/1.jpg" class="card-img-top"
+                                    alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Shape Shorter Cude</h5>
+                                    <p class="card-text">Shape Shorter Cube: Match shapes, stack pieces,
+                                        learn
+                                        through play.</p>
+                                    <h4><b>₹ 199</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="shape_shorter.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col  d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/Products img/Edited/F301/B1.jpg" class="card-img-top"
+                                    alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Alpha Numeric Puzzle Game</h5>
+                                    <p class="card-text">Learn letters, numbers with colorful sticks for fun
+                                        educational play. </p>
+                                    <h4><b>₹ 249</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="alpha_numeric.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/2.jpeg" class="card-img-top" alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">2 in 1 Montessori Learning toy</h5>
+                                    <p class="card-text">Boosts early learning with fun, hands-on activities
+                                        and
+                                        dual-purpose play.</p>
+                                    <h4><b>₹ 299</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="montessori_learning.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/7.jpeg" class="card-img-top" alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Shape Matching Game</h5>
+                                    <p class="card-text">Fun and educational toy to match shapes, colors,
+                                        and
+                                        boost motor skills.</p>
+                                    <h4><b>₹ 299</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="shape_matching.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/Products img/Edited/F302/1.jpg" class="card-img-top"
+                                    alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Shape Shorter Cude</h5>
+                                    <p class="card-text">Shape Shorter Cube: Match shapes, stack pieces,
+                                        learn
+                                        through play.</p>
+                                    <h4><b>₹ 199</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="shape_shorter.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col  d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/Products img/Edited/F301/B1.jpg" class="card-img-top"
+                                    alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Alpha Numeric Puzzle Game</h5>
+                                    <p class="card-text">Learn letters, numbers with colorful sticks for fun
+                                        educational play. </p>
+                                    <h4><b>₹ 249</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="alpha_numeric.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/2.jpeg" class="card-img-top" alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">2 in 1 Montessori Learning toy</h5>
+                                    <p class="card-text">Boosts early learning with fun, hands-on activities
+                                        and
+                                        dual-purpose play.</p>
+                                    <h4><b>₹ 299</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="montessori_learning.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/7.jpeg" class="card-img-top" alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Shape Matching Game</h5>
+                                    <p class="card-text">Fun and educational toy to match shapes, colors,
+                                        and
+                                        boost motor skills.</p>
+                                    <h4><b>₹ 299</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="shape_matching.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/Products img/Edited/F302/1.jpg" class="card-img-top"
+                                    alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Shape Shorter Cude</h5>
+                                    <p class="card-text">Shape Shorter Cube: Match shapes, stack pieces,
+                                        learn
+                                        through play.</p>
+                                    <h4><b>₹ 199</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="shape_shorter.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col  d-flex mb-3">
+                            <div class="card">
+                                <img src="./assets/img/Products img/Edited/F301/B1.jpg" class="card-img-top"
+                                    alt="product-img" loading="lazy">
+                                <div class="card-body">
+                                    <h5 class="card-title">Alpha Numeric Puzzle Game</h5>
+                                    <p class="card-text">Learn letters, numbers with colorful sticks for fun
+                                        educational play. </p>
+                                    <h4><b>₹ 249</b></h4>
+                                    <span>Free Delivery</span>
+                                    <a href="alpha_numeric.html" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- </div>
+                    </div> -->
+                </div>
+            </div>
+    </section>
+
+    <!-- Product section end -->
+
+
+
+
+
+
 
     <!-- Corporate start -->
-    <section class="jk-banner-area px-5 pt-5">
+    <!-- <section class="jk-banner-area px-5 pt-5">
         <div class="container-fluid">
             <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-2 row-cols-1">
                 <div class="col d-flex mb-3">
@@ -422,7 +617,7 @@
                     Get Best Deal</a>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Corporate end -->
     <!-- form -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
